--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        maven { url "http://maven.google.com"}
-        maven { url "http://jcenter.bintray.com"}
+        maven { url "https://maven.google.com"}
+        maven { url "https://jcenter.bintray.com"}
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
